--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js')
     script(src='/javascripts/jstat-2.0/jstat.min.js')
     script(src='/javascripts/underscore/underscore.js')
+    script(src='/javascripts/jquery.parse/jquery.parse.js')
     script(src='/javascripts/records_manager.js')
     script(src='/javascripts/techo.js')
   body
