--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,6 @@ html
     script(src='/javascripts/jstat-2.0/jstat.min.js')
     script(src='/javascripts/underscore/underscore.js')
     script(src='/javascripts/jquery.parse/jquery.parse.js')
-    script(src='/javascripts/records_manager.js')
-    script(src='/javascripts/techo.js')
+    script(src='/javascripts/main.js')
   body
     block content
